# my-RDagent

./: .dockerignore  .env.example  .gitignore  .importlinter  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FC4_IMPLEMENTATION_INDEX.md  FC4_MEMORY_CONTEXT_ANALYSIS.md  LICENSE  Makefile  QUICKSTART.md  README.md  SECURITY.md  TODOS.md  agentrd_cli.py  cli.py  config.example.yaml  conftest.py  data_models.py  demo_planner_loop.py  demo_task_intake_loop.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  service_contracts.py
.claude/: settings.local.json
.claude/rd-agent/: .rdagent-runtime-install.json  rd_agent
.codex/rd-agent/: .rdagent-runtime-install.json  README.md  pyproject.toml  scripts  skills
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  V3-EXTRACTION-HANDOFF.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: knowledge-base.md  phase26-auto-prune-skip-coverage.md  phase26-diversity-metric-modeling.md  phase26-duplicate-category-zero-side-effects.md  phase26-legacy-hypothesis-precedence.md  phase26-rd-agent-stale-run-payload.md
.planning/milestones/: v1.0-standalone-v3-baseline-AUDIT.md  v1.0-standalone-v3-baseline-REQUIREMENTS.md  v1.0-standalone-v3-baseline.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.1-standalone-surface-consolidation.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md  v1.3-MILESTONE-AUDIT.md  v1.3-REQUIREMENTS.md
.planning/notes/: 2026-03-24-finalization-state-interface-enhancement.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  RDAGENT-REAL-WORLD-UX-REPORT.md  (+2 more)
.sisyphus/: boulder.json
app/: __init__.py  api_main.py  config.py  control_plane.py  control_plane_client.py  fastapi_compat.py  query_services.py  run_supervisor.py  runtime.py  startup.py
artifact_registry/: __init__.py  service.py
benchmarking/: __init__.py  contracts.py  langsmith_backend.py  profiles.py  reporting.py  result_schema.py  runner.py  task_registry.py
core/: path_safety.py
dev_doc/: api_reference.md  architecture.md  branch_trace_store_mvp.md  builder_tasks_mvp.md  builder_tasks_v1.md  builder_thread.md  builder_thread_v1.md  cli_contract_mvp.md  cli_integration_mvp.md  config_env_mapping.md  configuration.md  data_science_plugin_v1.md  deploy_minimal_mvp.md  deployment.md  event_protocol_mvp.md  execution_backend_mvp.md  fc_contract_table.md  llm_adapter_mvp.md  loop_engine_mvp.md  observability_security_baseline.md  openapi_v1_draft.md  paper_gap_analysis.md  product_requirements.md  quant_scenario.md  reverse_engineered_architecture.md  reverse_engineered_prd.md  reverse_engineered_spec.md  reviewer_checks_mvp.md  reviewer_thread.md  run_service_mvp.md  runbook.md  runbook_mvp.md  runbook_v1_service.md  storage_foundation_mvp.md  system_specifications.md  task_17_test_matrix.md  task_18_v1_contracts.md  task_19_synthetic_research.md  task_20_per_step_config.md  task_21_control_plane.md  (+4 more)
development_service/: __init__.py  service.py
evaluation_service/: __init__.py  deepeval_bridge.py  service.py  stratified_splitter.py  validation_selector.py
execution_service/: __init__.py  service.py
exploration_manager/: __init__.py  merging.py  pruning.py  reward.py  scheduler.py  service.py
llm/: __init__.py  adapter.py  prompts.py  schemas.py
memory_service/: __init__.py  hypothesis_selector.py  interaction_kernel.py  service.py
observability/: __init__.py  logging_config.py  redaction.py  service.py
orchestrator_rd_loop_engine/: __init__.py  service.py
planner/: __init__.py  service.py
plugins/: __init__.py  contracts.py  registry.py
rd_agent/: __init__.py
reasoning_service/: __init__.py  service.py
scenarios/: __init__.py
scripts/: bump_version.py  e2e_data_science_arena.py  e2e_gemini_test.py  e2e_resilience_arena.py  install_agent_skills.py  real_test_llm.py  run_data_science_e2e.py  run_langsmith_benchmark.py  run_quant_e2e.py  run_quant_e2e_costeer.py  run_synthetic_research_e2e.py  run_task17_acceptance.sh  run_task23_acceptance.sh  run_v2_benchmark.sh  setup_env.sh
task_intake_data_splitter/: __init__.py  service.py
tests/: _llm_test_utils.py  conftest.py  test_app_smoke.py  test_branch_pruning.py  test_cli.py  test_codegen_extractors.py  test_codegen_llm_integration.py  test_codegen_quality_gate.py  test_codegen_validators.py  test_correction_exceptions.py  test_correction_feedback_enricher.py  test_costeer.py  test_costeer_integration.py  test_data_models_extended.py  test_data_models_mcts.py  test_data_science_code_safety.py  test_data_science_codegen_contract.py  test_data_science_quality_rubric.py  test_e2e_fc2_fc3.py  test_e2e_fc3.py  test_engine_multibranch.py  test_exploration_manager.py  test_fc1456_data_models.py  test_fc1456_e2e.py  test_fc1456_edge_cases_t15.py  test_fc1456_mocks.py  test_fc1456_prompts.py  test_fc1456_schemas.py  test_fc1456_wiring.py  test_fc1_planning.py  test_fc4_hypothesis_selector.py  test_fc4_interaction_kernel.py  test_fc4_memory.py  test_fc5_debug_mode.py  test_fc6_evaluation.py  test_few_shot_registry.py  test_hypothesis_default_enabled.py  test_installed_skill_workflows.py  test_integration_full_loop.py  test_integration_wiring.py  (+113 more)
trace_store/: __init__.py  service.py  ui_view.py
tracing/: __init__.py  config.py  sinks.py
ui/: __init__.py  trace_ui.py
v2/: __init__.py  __main__.py  cli.py  models.py  run_service.py  run_supervisor.py  runtime.py  state.py
v3/: __init__.py
(+709 files in other folders)
