[project]
name = "rd-agent"
version = "1.2.0"
description = "RDAgent: propose-code-execute-evaluate loop with skills and CLI tools"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "RDAgent Team"}]
dependencies = [
    "pydantic>=2,<3",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "hypothesis>=6.0.0",
    "import-linter>=2.3,<3.0",
]
lint = [
    "ruff>=0.3",
]

[project.scripts]
rdagent-tool = "rd_agent.entry.tool_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rd_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["rd_agent"]
